--- a/index.html
+++ b/index.html
@@ -273,10 +273,19 @@
       }
       scaling.active = false;
     }
-    
+
     function collideObject(indexTip) {
-      const object = plan;
-      return object;
+      const objects = [plan, cube];
+      for (let i = 0; i < objects.length; i++) {
+        const object = objects[i];
+
+        const distance = indexTip.getWorldPosition(tmpVector1).distanceTo(object.getWorldPosition(tmpVector2));
+
+        if (distance < object.geometry.boundingSphere.radius * object.scale.x) {
+          return object;
+        }
+      }
+      return null;
     }
 
     init();
@@ -337,7 +346,7 @@
         videoTexture.generateMipmaps = false;
         videoTexture.format = THREE.RGBAFormat;
 
-        let discret = 1;
+        let discret = 10;
         const positions = [];
         for (let i = 0; i < video.videoHeight; i += discret)
           for (let j = 0; j < video.videoWidth; j += discret) {
