--- a/index.html
+++ b/index.html
@@ -282,23 +282,26 @@
           let distance = null;
           objects.forEach(object => {
             const intersections = hp.intersectObject(object, false);
-            console.log(intersections);
-
             if (intersections && intersections.length > 0) {
               distance = intersections[0].distance;
               selectingObj = object;
+              console.log(selectingObj);
             }
           });
 
           if (distance) {
             hp.setCursor(distance ? distance: 1.5);
             if (hp.isPinched() && !hp.isAttached()) {
-              hp.setAttached(true)
+              hp.setAttached(true);
             } else if (!hp.isPinched() && hp.isAttached()){
-              hp.setAttached(false)
+              hp.setAttached(false);
+              selectingObj = null;
+              console.log(selectingObj);
             }
           } 
           else {
+            // selectingObj = null;
+            console.log(selectingObj);
             hp.setCursor(distance ? distance: 1.5);
           }
         }
@@ -306,8 +309,9 @@
     }
 
     function collideObject(indexTip) {
-      const objects = [plan, cube]
+      const objects = [plan, cube];
       setRightPointerCursor(objects)
+      console.log(selectingObj)
       return selectingObj;
     }
 
@@ -369,7 +373,7 @@
         videoTexture.generateMipmaps = false;
         videoTexture.format = THREE.RGBAFormat;
 
-        const discret = 1;
+        const discret = 10;
         const positions = [];
         for (let i = 0; i < video.videoHeight; i += discret)
           for (let j = 0; j < video.videoWidth; j += discret) {
@@ -478,6 +482,7 @@
         const newScale = scaling.initialScale + distance / scaling.initialDistance - 1;
         scaling.object.scale.setScalar(newScale);
       }
+      setRightPointerCursor([plan, cube]);
       renderer.render(scene, camera);
     }
 
