--- a/visualizeColorFromVideoInVR/colorCloudVRPointer.html
+++ b/visualizeColorFromVideoInVR/colorCloudVRPointer.html
@@ -367,7 +367,7 @@
       // scene.add(axesHelper);
 
       video = document.createElement("video");
-      video.src = "visualizeColorFromVideoInVR/video_html_data/razi.mp4";
+      video.src = "video_html_data/razi.mp4";
       video.load();
       video.muted = true;
       video.loop = true;
