--- a/visualizeColorFromVideoInVR/colorCloudXR.html
+++ b/visualizeColorFromVideoInVR/colorCloudXR.html
@@ -334,7 +334,7 @@
       // scene.add(axesHelper);
 
       video = document.createElement("video");
-      video.src = "visualizeColorFromVideoInVR/video_html_data/razi.mp4";
+      video.src = "video_html_data/razi.mp4";
       video.load();
       video.muted = true;
       video.loop = true;
