--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </header>
 
+  <section id="practicalWork2">
+    <h2>Practical Work #2.1</h2>
+    <div class="block" onclick="window.location.href='shader-based-image-processing/index.html'">
+      <video autoplay muted loop>
+        <source src="shader-based-image-processing/practical-work2.mov" type="video/mp4">
+      </video>
+      <div class="block-title">Shader Based Image Processing</div>
+    </div>
+  </section>
+
   <section id="sprint-workshop-2014">
     <h2>Sprints - Workshop 2024</h2>
     <div class="block" onclick="window.location.href='visualizeColorFromVideoInVR/colorCloudRGB.html'">
@@ -89,7 +99,7 @@
   </section>
 
   <section id="practicalWork1">
-    <h2>Practical Work #1</h2>
+    <h2>Practical Work #1.1</h2>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex1.html'">
       <video autoplay muted loop>
@@ -127,8 +137,8 @@
     </div>
 
   </section>
-  <section id="practicalWork2">
-    <h2>Practical Work #2</h2>
+  <section id="practicalWork1.1">
+    <h2>Practical Work #1.2</h2>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex1.html'">
       <video autoplay muted loop>
